--- a/slideshow_project/package.json
+++ b/slideshow_project/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "bootstrap-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
+    "html-to-vdom": "^0.7.0",
     "jquery": "^3.2.1",
     "ramda": "^0.23.0"
   },
